<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".login.MainActivity"
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center|top|fill_vertical" android:backgroundTint="@color/fondoApp">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/scroll" android:background="@color/fondoOk">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:gravity="center|center_vertical"
                      android:backgroundTint="@color/fondoOk">
            <ImageView
                    android:layout_width="wrap_content"
                    tools:srcCompat="@drawable/logoapp"
                    android:id="@+id/imageLogo"
                    android:layout_height="230dp"
                    app:srcCompat="@drawable/logoapp" android:contentDescription="@string/logo"
                    android:backgroundTint="@color/fondoApp" tools:backgroundTintMode="screen"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:ems="10"
                    android:id="@+id/etEmail"
                    android:hint="@string/correo_electr_nico"
                    android:layout_marginTop="30dp" android:inputType="textEmailAddress" android:autofillHints=""
                    android:background="@android:color/white"
                    android:fontFamily="@font/futurah"
                    android:textColor="@android:color/black"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/etPassword"
                    android:layout_marginTop="15dp"
                    android:hint="@string/contrase_a" android:autofillHints=""
                    android:fontFamily="@font/futurah"
                    android:textColor="@android:color/black"
                    android:background="@android:color/white"/>

            <Button
                    android:text="@string/entrar"
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/botonEntrar" android:onClick="entrar" android:textColor="@android:color/white"
                    android:textStyle="bold" android:fontFamily="@font/futurah"
                    android:background="@color/fondoOk" android:layout_marginTop="10dp"/>
            <Button
                    android:text="@string/registrarse"
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/botonRegistro" android:onClick="registrarse"
                    android:fontFamily="@font/futurah" android:textColor="@android:color/white"
                    android:background="@color/fondoOk" android:textStyle="bold"
                    android:layout_marginTop="15dp"/>
            <TextView
                    android:onClick="passOlvidado"
                    android:text="@string/has_olvidado_la_contrase_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rPassword"
                    android:fontFamily="@font/futurah"

                    android:textAlignment="center" android:textSize="18sp" android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>