<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="login.Registro"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top|fill_vertical" android:background="@color/fondoOk">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center|center_vertical">
            <ImageView
                    android:layout_width="wrap_content"
                    tools:srcCompat="@drawable/logoapp"
                    android:id="@+id/imageLogo"
                    android:layout_height="230dp"
                    app:srcCompat="@drawable/logoapp"
                    android:contentDescription="@string/logo"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/etCorreo" android:hint="@string/correoelectronico"
                    android:background="@android:color/white"
                    android:fontFamily="@font/futurah"
                    android:textColor="@android:color/black" android:layout_marginTop="30dp"
                    android:importantForAutofill="no"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/etPass" android:hint="@string/contrasena"
                    android:fontFamily="@font/futurah"
                    android:textColor="@android:color/black"
                    android:background="@android:color/white" android:layout_marginTop="15dp" android:autofillHints=""/>
            <Button
                    android:text="@string/registrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/bRegistrar"
                    android:onClick="registrarUsuario" android:background="@color/fondoOk"
                    android:fontFamily="@font/futurah"
                    android:textColor="@android:color/white" android:layout_marginTop="10dp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>