<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_margin="0dp"
              android:layout_height="match_parent"
              tools:context=".lista.UpdateActivity"
              android:background="@color/fondoOk">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:layout_marginTop="5dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/producto"
                android:fontFamily="@font/futurah"
                android:textColor="@android:color/white" android:textSize="18sp"/>
        <EditText

                android:id="@+id/edt_fname"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:background="@android:color/white"
                android:textColor="@android:color/black" android:autofillHints="" android:inputType=""/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:layout_marginTop="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/marca"
        android:fontFamily="@font/futurah"
                android:textColor="@android:color/white" android:textSize="18sp"/>

        <EditText

                android:id="@+id/edt_lname"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:background="@android:color/white"
                android:textColor="@android:color/black" android:autofillHints="" android:inputType=""/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:layout_marginTop="15dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/tipo"
                android:textColor="@android:color/white" android:textSize="18sp"
        android:fontFamily="@font/futurah"/>
        <Spinner

                android:id="@+id/spinner_std"

                android:entries="@array/standard"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
        android:background="@android:color/white">
        </Spinner>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal" android:layout_marginTop="10dp">

        <Button
                android:layout_width="0dp"
                android:text="@string/actualizar"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/btn_update"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/futurah"
                android:textColor="@android:color/white"
                android:background="@color/fondoOk"/>
    </LinearLayout>

</LinearLayout>